# cvpr-paper-scraper

./: .gitignore  CLAUDE.md  README.md  poster_generator.py  pyproject.toml  requirements.txt  scraper.py
