[project]
name = "cvpr-paper-scraper"
version = "0.1.0"
description = "CVPR 2024 paper scraper and infographic poster generator with topic clustering"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.3.0",
    "jinja2>=3.1.0",
    "weasyprint>=60.0",
]

[project.scripts]
scrape = "scraper:main"
poster = "poster_generator:main"
